--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ button{
     margin-top: 100px;
 }
 
-.scores input{
+.scores input , .display-choices input{
     padding: 20px 0;
     text-align: center;
     font-size: 20px;
@@ -87,11 +87,5 @@ button{
 }
 
 .display-choices input{
-    padding: 20px 0;
-    text-align: center;
-    font-size: 20px;
-    outline: none;
-    border-radius: 10px;
     background-color: rgb(46, 182, 228);
-    border: none;
 }
